--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
-name: "My Custom Add-ons"
+name: "Bitsbiter Custom Add-ons"
 url: "https://github.com/bitsbiter/home-assistant-addons"
 maintainer: "bitsbiter bitsbiter@example.com"
