--- a/nestmtx/config.yaml
+++ b/nestmtx/config.yaml
@@ -10,8 +10,6 @@ host_network: true
 
 arch:
   - aarch64
-  - armv7
-  - amd64
 
 options:
   google_project_id: ""
@@ -32,4 +30,4 @@ ports:
 map:
   - config:rw
 
-image: "ghcr.io/mrlt8/nestmtx"
+image: "nestmtx/arm64:latest"
