--- a/nestmtx/build.yaml
+++ b/nestmtx/build.yaml
@@ -1,3 +1,3 @@
 build_from:
-  aarch64: "nestmtx/arm64:latest"
-  amd64: "nestmtx/amd64:latest"
+  aarch64: "ghcr.io/home-assistant/aarch64-base:latest"
+  amd64: "ghcr.io/home-assistant/amd64-base:latest"
