--- a/nestmtx/Dockerfile
+++ b/nestmtx/Dockerfile
@@ -1,8 +1,10 @@
-# Stage 1: Get the nestmtx binary from its official image
-FROM nestmtx/arm64:latest as nestmtx
-
-# Stage 2: Build the addon using the HA base image
+# This ARG is passed in by the Home Assistant build environment.
 ARG BUILD_FROM
+
+# Stage 1: Get the nestmtx binary from the official arm64 image
+FROM nestmtx/arm64:latest AS nestmtx
+
+# Stage 2: Build the final addon using the HA base image for aarch64
 FROM ${BUILD_FROM}
 
 # Copy the nestmtx binary from the first stage into our addon
